--- a/helwa-webapp/HomePage.html
+++ b/helwa-webapp/HomePage.html
@@ -30,7 +30,8 @@
 			<div class="form-group">
 				<label for="recipe_url" class="col-xs-2 col-sm-2 col-sm-offset-2 control-label">Recipe URL</label>
 				<div class="col-xs-8 col-sm-4">
-					<input type="url" class="form-control" id="recipe_url" name="recipe_url" placeholder="http://www.foodnetwork.com/recipes ..." required autofocus autocomplete="off">
+					<!-- <input type="url" class="form-control" id="recipe_url" name="recipe_url" placeholder="http://www.foodnetwork.com/recipes ..." required autofocus autocomplete="off"> -->
+					<input type="url" class="form-control" id="recipe_url" name="recipe_url" placeholder="http://www.foodnetwork.com/recipes ..." required autofocus autocomplete="off" value="http://www.foodnetwork.com/recipes/food-network-kitchens/glazed-salmon-with-spiced-carrots-recipe.html">
 				</div>
 				<div class="col-xs-2 col-sm-2">
 					<button type="submit" class="btn btn-default">Create</button>
