--- a/helwa-webapp/RecipeEnginePage.html
+++ b/helwa-webapp/RecipeEnginePage.html
@@ -13,6 +13,7 @@
 
     <!-- Custom Javascript -->
     <script src="/js/RecipeModel.js" type="text/javascript" ></script>
+    <script src="/js/DynamicHtmlGenerator.js" type="text/javascript" ></script>
 </head>
 
 <body>
