Adding prettysentence to the list of direction dictionaries

--- a/helwa-webapp/RecipeEnginePage.html
+++ b/helwa-webapp/RecipeEnginePage.html
@@ -45,7 +45,9 @@
 
 
 	<b>Recipe Directions: </b>
-    <p>{{ directions }}</p>
+    <p>
+    {{ directions }}
+    </p>
     <br>
 
 	{% if nutrition %}
