Expand graph input textarea
Makes it easier to play with graph in textarea

--- a/helwa-webapp/RecipeEnginePage.html
+++ b/helwa-webapp/RecipeEnginePage.html
@@ -33,7 +33,7 @@
     <br>
 
     <!-- The editor for storing the markup -->
-    <textarea class="editor">
+    <textarea class="editor" rows="10" cols="50">
 graph LR;
 C-->F;
 F-->I;
@@ -46,7 +46,7 @@ H-->I((I));
    </textarea>
 
    <!-- Refresh button -->
-   <button class="button">Generate</button>
+   <button class="button btn btn-default">Generate</button>
 
    <!-- Visualization Area -->
    <div class="group mermaid">
