Working graph logic

--- a/helwa-webapp/RecipeEnginePage.html
+++ b/helwa-webapp/RecipeEnginePage.html
@@ -19,6 +19,13 @@
     <!-- <script src="/js/mermaid.full.js"></script> -->
     
     <script src="/js/build.js"></script>
+
+    <!-- CSS Override -->
+    <style>
+    g.label {
+        color: #000 !important;
+    }
+    </style>
     
 </head>
 
@@ -51,7 +58,7 @@
    <button class="button btn btn-default">Generate</button>
 
    <!-- Visualization Area -->
-   <div class="group mermaid">
+   <div class="group mermaid" >
 
    </div>
 
